# ai-xiaohongshu

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  commitlint.config.js  package.json  tasks.md
.husky/: commit-msg  pre-commit
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_agent_runs_table.py  0002_add_agent_run_details.py  0003_add_audit_logs_table.py  0004_create_api_keys_table.py  0005_extend_audit_logs_with_metrics.py  0006_create_cover_tables.py  0007_cover_jobs_progress_retry_dedupe.py
backend/app/: __init__.py  deps.py  main.py  security.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  admin.py  agent_runs.py  auth.py  creative.py  external.py  marketing.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/schemas/: __init__.py  agent_runs.py  marketing.py
backend/app/services/: __init__.py  agent_runs.py  ark_client.py  audit.py  cover_jobs.py  covers.py  marketing.py  orchestrator.py  rate_limit.py
backend/app/worker/: celery_app.py
backend/tests/: conftest.py  test_admin_cover_jobs.py  test_admin_cover_presets.py  test_agent_run_details.py  test_agent_runs.py  test_agent_runs_api.py  test_audit_logs.py  test_cover_jobs_async.py  test_covers_api.py  test_creative_covers_jobs_sql.py  test_external_api_keys.py  test_health.py  test_marketing_api.py  test_marketing_service.py  test_orchestrator.py  test_rate_limit.py
docs/: marketing_collage.md
frontend/: .eslintrc.js  (+4 more)
(+16 files in other folders)
